--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -30,18 +30,19 @@
         app:layout_constraintStart_toStartOf="parent"
         android:hint="Email"
         app:layout_constraintTop_toBottomOf="@+id/tv_login_heading" />
+
     <EditText
         android:id="@+id/ed_log_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:inputType="textEmailAddress"
+        android:hint="Password"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        android:layout_marginHorizontal="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:hint="Password"
         app:layout_constraintTop_toBottomOf="@+id/ed_log_email" />
 
     <Button
