--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -19,12 +19,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
+    <EditText
+        android:id="@+id/ed_full_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Full Name"
+        tools:layout_editor_absoluteX="18dp"
+        tools:layout_editor_absoluteY="162dp"
+        android:layout_marginTop="75dp"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@+id/tv_regsiter_heading"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/ed_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="40dp"
         android:layout_marginHorizontal="20dp"
         android:ems="10"
         android:hint="Enter your email address"
@@ -32,8 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_regsiter_heading"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/ed_full_name" />
 
     <EditText
         android:id="@+id/ed_password"
@@ -104,4 +117,6 @@
             android:textColor="@color/teal_200"
             />
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
