--- a/app/src/main/res/layout/activity_room_info_view.xml
+++ b/app/src/main/res/layout/activity_room_info_view.xml
@@ -8,27 +8,63 @@
     android:isScrollContainer="true"
     tools:context=".roomInfoView">
 
-  <TextView
-      android:id="@+id/tv_room_name"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:hint="Room Name"
-      android:textSize="24sp"
-      android:layout_centerHorizontal="true"
-      android:layout_marginTop="35dp"
-      android:textAlignment="center"
-      tools:layout_editor_absoluteX="173dp"
-      android:layout_alignParentTop="true"
-      tools:layout_editor_absoluteY="64dp" />
-
-  <TextView
-      android:id="@+id/tv_room_details"
+  <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_below="@+id/tv_room_name"
-      android:layout_marginTop="20dp"
-      android:textAlignment="center"
-      android:layout_marginHorizontal="30dp"
-      android:hint="Room Details" />
+      android:layout_centerHorizontal="true"
+      android:layout_centerVertical="true"
+      >
+    <TextView
+        android:id="@+id/tv_room_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Room Name"
+        android:textSize="24sp"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        tools:layout_editor_absoluteX="173dp"
+        android:layout_alignParentTop="true"
+        tools:layout_editor_absoluteY="64dp" />
+
+    <TextView
+        android:id="@+id/tv_room_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_room_name"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center"
+        android:layout_marginHorizontal="30dp"
+        android:hint="Room Details" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/layout_admin_room_control"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/tv_room_details"
+        >
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layout_admin_room_control"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        >
+      <Button
+          android:id="@+id/btn_access_requests"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textAllCaps="false"
+          android:text="Access requests"
+          android:backgroundTint="@color/teal_200"
+          android:textColor="@color/white"
+          />
+
+    </RelativeLayout>
+  </RelativeLayout>
+
+
 
 </RelativeLayout>
