--- a/app/src/main/res/layout/activity_manage_moderators.xml
+++ b/app/src/main/res/layout/activity_manage_moderators.xml
@@ -1,9 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".manage_moderators">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:id="@+id/rv_add_panel"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@color/teal_100"
+        >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            >
+            <EditText
+                android:id="@+id/ed_mod_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Enter user email"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black"
+                android:layout_centerVertical="true"
+                android:textColorHighlight="@color/teal_700"
+                android:textColorHint="@color/black"></EditText>
+
+            <Button
+                android:id="@+id/btn_add_mod"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="7sp"
+                android:layout_toRightOf="@+id/ed_mod_email"
+                android:text="Add Mod"
+                android:clickable="true"
+                android:textAllCaps="false"></Button>
+        </LinearLayout>
+    </RelativeLayout>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lv_moderators"
+        android:layout_below="@+id/rv_add_panel"
+        android:dividerHeight="10dp"
+        android:divider="@color/white"
+        android:padding="10dp"
+        >
+
+    </ListView>
+
+</RelativeLayout>
